--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ db.sqlite3
 /go_server/__pycache__
 /go_server/migrations/__pycache__
 /go_server/utils/__pycache__
+/go_server/fibre_folder/__pycache__
+/go_server/go_folder/__pycache__
