--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ db.sqlite3
 /go_server/migrations/__pycache__
 /go_server/project_modules/__pycache__
 /go_server/project_modules/util_modules/__pycache__
+/go_server/project_modules/port_modules/__pycache__
 /go_server/project_modules/fibre_modules/__pycache__
 /go_server/project_modules/go_modules/__pycache__
